--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Geleceğin Yüz Sorumluluğu</title>
+    <title>Geleceğin 100 Sorumluluğu</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
     <style>
         :root {
@@ -103,7 +103,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="text-center">Geleceğin Yüz Sorumluluğu</h1>
+        <h1 class="text-center">Geleceğin 100 Sorumluluğu</h1>
         <p class="intro-text text-center">Yaşamı korumak için birlikte hareket edelim.</p>
         
         <div class="responsibilities-list">
